Fix code overflowing on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -59,6 +59,7 @@ code,
 kbd,
 samp,
 pre {
+  overflow: scroll;
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   font-size: 1em;
 }
